2009-05-08  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Allow to get subscriptions on a given
	node (EJAB-712); Improve XML schema validation on publish item;
	Remove subscriptions of users whose authorization has been removed on
	nodes with presence access model; Do not allow unsubscribed user to
	subscribe node with presence access model.

2009-05-08  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_app.erl: Better support for profiling.
	* src/ejabberd.erl: Likewise
	* src/ejabberd_ctl.erl: Likewise
	* src/ejabberd_debug.erl: Likewise

2009-05-07  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_caps.erl: Set debug message to DEBUG (from debian patch,
	thanks to Sergei Golovan)

	* src/mod_pubsub/mod_pubsub.erl: Remove subscriptions when anonymous
	user removed (EJAB-913) (thanks to Andy Skelton)

	* src/mod_pubsub/mod_pubsub.erl: Fix disco#items bug on root node,
	and fix other minor typo from previous patch.

	* src/mod_pubsub/mod_pubsub.erl: Avoid calling get_user_resources
	on non local domain when pep_sendlast_offline is enabled

	* src/mod_pubsub/mod_pubsub.erl: Reduce send_last_item load and number
	of calls to get_caps

	* src/mod_pubsub/mod_pubsub.erl: Fix get_entity_* not returning node
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/nodetree_default.erl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: Retract policy should obey
	pubsub#publish_model (EJAB-871) (thanks to Matthew Baron)
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_mb.erl: Likewise
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_buddy.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node_public.erl: Likewise
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/node_club.erl: Likewise
	* src/mod_pubsub/node_flat.erl: Likewise
	* src/mod_pubsub/node.template: Likewise
